# micro-mlops

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  model.py  pyproject.toml
.github/workflows/: docker-image.yml
src/micro_mlops/: app.py  model.py  sentiment_analysis.py
